Fix for null pointer access - Bug #17597 - r: jefft approved: chofmann